@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - FIX: Prevent and test for ranking area proxy exposures
 
+- FIX: Catch and wrap community request timeouts
+
 
 2.51 (2016-01-22)
 -----------------
